@@ -1,6 +1,5 @@
 package org.sonatype.gradle.plugins.scan;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.runners.Parameterized;
@@ -10,7 +9,7 @@ public class ScanIT_Gradle_Versions_5_5_to_5_6
 {
   @Parameterized.Parameters(name = "Version: {0}")
   public static List<String> data() {
-    return Arrays.asList("5.5", "5.6", "5.6.4");
+    return List.of("5.5", "5.6", "5.6.4");
   }
 
   public ScanIT_Gradle_Versions_5_5_to_5_6(final String gradleVersion) {
