@@ -15,20 +15,19 @@
  */
 package org.sonatype.gradle.plugins.scan;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.runners.Parameterized;
 
-public class ScanIT_Gradle_Versions_7_6_to_8_0
+public class ScanIT_Gradle_Versions_7_6_4
     extends ScanPluginIntegrationTestBase
 {
   @Parameterized.Parameters(name = "Version: {0}")
   public static List<String> data() {
-    return Arrays.asList("7.6.2", "7.6.4", "8.0");
+    return List.of("7.6.4");
   }
 
-  public ScanIT_Gradle_Versions_7_6_to_8_0(final String gradleVersion) {
+  public ScanIT_Gradle_Versions_7_6_4(final String gradleVersion) {
     super(gradleVersion);
   }
 }
