@@ -15,17 +15,16 @@
  */
 package org.sonatype.gradle.plugins.scan;
 
-import org.junit.runners.Parameterized;
-
-import java.util.Arrays;
 import java.util.List;
+
+import org.junit.runners.Parameterized;
 
 public class ScanIT_Gradle_Versions_8_6_to_8_10
     extends ScanPluginIntegrationTestBase
 {
   @Parameterized.Parameters(name = "Version: {0}")
   public static List<String> data() {
-    return Arrays.asList("8.6", "8.7", "8.8", "8.9", "8.10.1");
+    return List.of("8.6", "8.7", "8.8", "8.9", "8.10.2");
   }
 
   public ScanIT_Gradle_Versions_8_6_to_8_10(final String gradleVersion) {
